--- a/WEB/about.html
+++ b/WEB/about.html
@@ -20,25 +20,28 @@
 <body>
     <header class="hed">
         <div class="container">
-            <div class="header">
-                <div class="hed-left">
-                    <a href="http://127.0.0.1:5500/WEB/index.html#">NorthStar</a>
-                </div>
-
-                <div class="hed-midle">
-                    <a href="http://127.0.0.1:5500/WEB/index.html#">HOME</a>
-                    <a href="#" class="header-active">ABOUT</a>
-                    <a href="http://127.0.0.1:5500/WEB/contact.html">CONTACT US</a>
-                </div>
-
-                <div class="hed-rigth">
-                    <i class="fa-regular fa-user"></i>
-                    <i class="fa-solid fa-bag-shopping"></i>
-                    <i class="fa-solid fa-bars"></i>
-                </div>
+          <div class="header">
+            <div class="hed-left">
+              <a href="./index.html">NorthStar</a>
             </div>
+  
+            <div class="hed-midle">
+              <a href="./index.html">HOME</a>
+              <a href="#"class="header-active">ABOUT</a>
+              <a href="./contact.html">CONTACT US</a>
+            </div>
+  
+            <div class="hed-rigth">
+              <i class="fa-regular fa-user"></i>
+              <a href="shopping-cart.html" class="shoppingCartCount"
+                ><i class="fa-solid fa-bag-shopping"></i>
+                <span class="badge" id="productCount"></span>
+              </a>
+              <i class="fa-solid fa-bars"></i>
+            </div>
+          </div>
         </div>
-    </header>
+      </header>
 
     <section class="about-navbar">
         <div class="an-content">
@@ -52,14 +55,14 @@
                 <div class="card-One">
                     <img src="../imgs/WOMAN.png" alt="WOMAN">
                     <div class="co-context">
-                        <a href="http://127.0.0.1:5500/WEB/card-Info.html">buy ndow</a>
+                        <a href="./card-Info.html">buy ndow</a>
                     </div>
                 </div>
 
                 <div class="card-One">
                     <img src="../imgs/MAN.png" alt="MAN">
                     <div class="co-context">
-                        <a href="http://127.0.0.1:5500/WEB/card-info-two.html">buy now</a>
+                        <a href="./card-info-two.html">buy now</a>
                     </div>
                 </div>
             </div>
