--- a/WEB/contact.html
+++ b/WEB/contact.html
@@ -20,25 +20,28 @@
 <body>
     <header class="hed">
         <div class="container">
-            <div class="header">
-                <div class="hed-left">
-                    <a href="http://127.0.0.1:5500/WEB/index.html#">NorthStar</a>
-                </div>
-
-                <div class="hed-midle">
-                    <a href="http://127.0.0.1:5500/WEB/index.html#">HOME</a>
-                    <a href="http://127.0.0.1:5500/WEB/about.html">ABOUT</a>
-                    <a href="#" class="header-active">CONTACT US</a>
-                </div>
-
-                <div class="hed-rigth">
-                    <i class="fa-regular fa-user"></i>
-                    <i class="fa-solid fa-bag-shopping"></i>
-                    <i class="fa-solid fa-bars"></i>
-                </div>
+          <div class="header">
+            <div class="hed-left">
+              <a href="http://127.0.0.1:5500/WEB/index.html#">NorthStar</a>
             </div>
+  
+            <div class="hed-midle">
+              <a href="./index.html">HOME</a>
+              <a href="./about.html">ABOUT</a>
+              <a href="./contact.html"  class="header-active">CONTACT US</a>
+            </div>
+  
+            <div class="hed-rigth">
+              <i class="fa-regular fa-user"></i>
+              <a href="shopping-cart.html" class="shoppingCartCount"
+                ><i class="fa-solid fa-bag-shopping"></i>
+                <span class="badge" id="productCount"></span>
+              </a>
+              <i class="fa-solid fa-bars"></i>
+            </div>
+          </div>
         </div>
-    </header>
+      </header>
 
     <section class="contact-navbar">
         <div class="cn-content">
