--- a/WEB/card-info-two.html
+++ b/WEB/card-info-two.html
@@ -22,13 +22,13 @@
         <div class="container">
             <div class="header">
                 <div class="hed-left">
-                    <a href="http://127.0.0.1:5500/WEB/index.html#">NorthStar</a>
+                    <a href="./index.html">NorthStar</a>
                 </div>
 
                 <div class="hed-midle">
                     <a href="#" class="header-active">HOME</a>
-                    <a href="http://127.0.0.1:5500/WEB/about.html#">ABOUT</a>
-                    <a href="http://127.0.0.1:5500/WEB/contact.html">CONTACT US</a>
+                    <a href="./about.html">ABOUT</a>
+                    <a href="./contact.html">CONTACT US</a>
                 </div>
 
                 <div class="hed-rigth">
